--- a/prueba.css
+++ b/prueba.css
@@ -8,7 +8,7 @@
   font-family: "Poppins", sans-serif;
 }
 body {
-  background: #f0faff;
+  background: #e0f4ff;
 }
 .nav {
   position: fixed;
@@ -16,16 +16,17 @@ body {
   left: 0;
   width: 100%;
   padding: 15px 200px;
-  background: #4a98f7;
+  background: #0b60b0;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
 .nav,
 .nav .nav-links {
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 .nav {
-  justify-content: space-between;
+  border: 20px;
 }
 a {
   color: #fff;
@@ -87,6 +88,184 @@ a {
 .nav .navCloseBtn {
   display: none;
 }
+
+.logo-container {
+  display: flex;
+  align-items: center;
+}
+.logo {
+  font-size: 22px;
+  font-weight: 500;
+  margin-right: 10px; /* Adjust the margin as needed */
+}
+
+.logo-img {
+  margin-right: 10px; /* Adjust the margin as needed */
+}
+
+.banner {
+  display: flex;
+  margin: 150px;
+}
+
+.first-part {
+  margin-top: 50px;
+}
+
+.left-column,
+.right-column {
+  flex-basis: 50%;
+}
+
+.left-column {
+  background: #40a2d8;
+  padding: 20px;
+  border-radius: 1px;
+  border: 7px solid white;
+}
+.left-column h1 {
+  font-size: 100px;
+}
+.left-column p {
+  font-size: 20px;
+  color: #100;
+  margin: 50px 0;
+}
+.left-column h3 {
+  font-size: 35px;
+  color: #f0edcf;
+}
+
+.left-column h1,
+h3,
+p {
+  font-family: "Lato", sans-serif;
+}
+
+.left-column p {
+  letter-spacing: 1px;
+  line-height: 1.5;
+}
+
+.right-column {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+}
+
+.right-column img {
+  width: 25em;
+  border: 7px solid white;
+  border-radius: 1px;
+  transition: transform 0.3s ease;
+  margin-left: 50px;
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-transition-duration: 0.5s;
+  transition-duration: 0.5s;
+}
+
+.right-column img:hover {
+  -webkit-transform: scale(1.2);
+  transform: scale(1.1);
+  -webkit-transition-timing-function: cubic-bezier(0.47, 2.02, 0.31, -0.36);
+  transition-timing-function: cubic-bezier(0.47, 2.02, 0.31, -0.36);
+}
+
+#overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+#imagenMostrada {
+  max-width: 80%;
+  max-height: 80%;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+#imagenMostrada{
+  height: 500px;
+}
+
+
+
+.btn {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.btn button {
+  border-radius: 5px;
+  padding: 10px;
+  margin: 0 5px;
+  border: none; /* Espaciado entre los botones */
+}
+
+.btn a button {
+  text-decoration: none; /* Evitar subrayado en el botón dentro de un enlace */
+}
+
+.hvr-shutter-out-horizontal {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  position: relative;
+  background: #e1e1e1;
+  -webkit-transition-property: color;
+  transition-property: color;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+}
+.hvr-shutter-out-horizontal:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: #0b60b0;
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transform-origin: 50%;
+  transform-origin: 50%;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+}
+.hvr-shutter-out-horizontal:hover, .hvr-shutter-out-horizontal:focus, .hvr-shutter-out-horizontal:active {
+  color: white;
+}
+.hvr-shutter-out-horizontal:hover:before, .hvr-shutter-out-horizontal:focus:before, .hvr-shutter-out-horizontal:active:before {
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1);
+}
+
+
+
+
+
+
+
 
 /* responsive */
 @media screen and (max-width: 1160px) {
