--- a/prueba.css
+++ b/prueba.css
@@ -7,8 +7,15 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
+
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background: #e0f4ff;
+  margin: 0;
+  padding: 0;
 }
 .nav {
   position: fixed;
@@ -18,6 +25,7 @@ body {
   padding: 15px 200px;
   background: #0b60b0;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  z-index: 1000; /* Set a higher z-index to make sure it appears above other elements */
 }
 .nav,
 .nav .nav-links {
@@ -25,6 +33,10 @@ body {
   align-items: center;
   justify-content: space-between;
 }
+.nav-links {
+  justify-content: center;
+}
+
 .nav {
   border: 20px;
 }
@@ -106,6 +118,7 @@ a {
 .banner {
   display: flex;
   margin: 150px;
+  margin-top: 210px;
 }
 
 .first-part {
@@ -151,7 +164,7 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: auto;
+  margin: 0;
 }
 
 .right-column img {
@@ -159,7 +172,7 @@ p {
   border: 7px solid white;
   border-radius: 1px;
   transition: transform 0.3s ease;
-  margin-left: 50px;
+  margin-left: 50p;
   display: inline-block;
   vertical-align: middle;
   -webkit-transform: perspective(1px) translateZ(0);
@@ -196,11 +209,9 @@ p {
   cursor: pointer;
 }
 
-#imagenMostrada{
+#imagenMostrada {
   height: 500px;
 }
-
-
 
 .btn {
   display: flex;
@@ -252,19 +263,309 @@ p {
   -webkit-transition-timing-function: ease-out;
   transition-timing-function: ease-out;
 }
-.hvr-shutter-out-horizontal:hover, .hvr-shutter-out-horizontal:focus, .hvr-shutter-out-horizontal:active {
+.hvr-shutter-out-horizontal:hover,
+.hvr-shutter-out-horizontal:focus,
+.hvr-shutter-out-horizontal:active {
   color: white;
 }
-.hvr-shutter-out-horizontal:hover:before, .hvr-shutter-out-horizontal:focus:before, .hvr-shutter-out-horizontal:active:before {
+.hvr-shutter-out-horizontal:hover:before,
+.hvr-shutter-out-horizontal:focus:before,
+.hvr-shutter-out-horizontal:active:before {
   -webkit-transform: scaleX(1);
   transform: scaleX(1);
 }
 
+#primerhr {
+  color: #0b60b0; /* You can use any valid color code or name */
 
+  /* Set the height of the horizontal rule */
+  height: 25px;
 
+  /* Set the width of the horizontal rule */
+  width: 50%;
 
+  /* Add some margin for spacing */
+  margin: 20px auto;
 
+  /* Style the border (optional) */
+  border: none;
+  border-top: 3px solid #0b60b0; /* You can customize the border style as well */
 
+  /* Style the opacity (optional) */
+  opacity: 0.7;
+}
+#segundohr {
+  color: #0b60b0; /* You can use any valid color code or name */
+
+  /* Set the height of the horizontal rule */
+  height: 25px;
+
+  /* Set the width of the horizontal rule */
+  width: 50%;
+
+  /* Add some margin for spacing */
+  margin: auto;
+
+  /* Style the border (optional) */
+  border: none;
+  border-top: 3px solid #0b60b0; /* You can customize the border style as well */
+
+  /* Style the opacity (optional) */
+  opacity: 0.7;
+}
+
+/* carousel */
+* {
+  box-sizing: border-box;
+}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Hide the images by default */
+.mySlides {
+  display: none;
+  max-width: 50%;
+  margin: auto;
+}
+
+.mySlides img {
+  width: 100%; /* Set the width to 100% of the parent container */
+  height: auto; /* Auto-adjust the height to maintain proportions */
+  max-height: 50%;
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: #0b60b0;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Caption text */
+.text {
+  color: black;
+  font-size: 15px;
+  padding: 8px 12px;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active,
+.dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+#firstcarimage {
+  width: 100px;
+}
+
+.card {
+  width: 640px;
+  height: 400px;
+  position: relative;
+  margin: 100px;
+  -webkit-perspective: 1200px;
+  perspective: 1200px;
+  transition: 1s;
+}
+
+.card:hover {
+  transform: rotate(-5deg);
+}
+.card:hover .outside {
+  transform: rotateY(-130deg);
+}
+.outside,
+.inside {
+  height: 100%;
+  width: 50%;
+  position: absolute;
+  left: 50.1%;
+}
+.inside {
+  background: linear-gradient(to right, #e7e7e7, #ffffff 30%);
+  line-height: 3;
+  padding: 0 20px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  left: 50%;
+}
+.outside {
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+  z-index: 1;
+  transform-origin: left;
+  transition: 2s;
+  cursor: pointer;
+}
+.front,
+.back {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  transform: rotateX(0deg);
+}
+.front {
+  background-color: #ffffff;
+}
+.back {
+  transform: rotateY(180deg);
+  background: linear-gradient(to left, #e7e7e7, #ffffff 30%);
+}
+.cake {
+  width: 100%;
+  position: absolute;
+  bottom: 30px;
+}
+.top-layer,
+.middle-layer,
+.bottom-layer {
+  height: 80px;
+  width: 240px;
+  background-repeat: repeat;
+  background-size: 60px 100px;
+  background-position: 28px 0;
+  background-image: linear-gradient(
+      transparent 50px,
+      #fedbab 50px,
+      #fedbab 60px,
+      transparent 60px
+    ),
+    radial-gradient(circle at 30px 5px, #994c10 30px, #fcbf29 31px);
+  border-radius: 10px 10px 0 0;
+  position: relative;
+  margin: auto;
+}
+.middle-layer {
+  transform: scale(0.85);
+  top: 6px;
+}
+.top-layer {
+  transform: scale(0.7);
+  top: 26px;
+}
+.candle {
+  height: 45px;
+  width: 15px;
+  background: repeating-linear-gradient(
+    45deg,
+    #fd3018 0,
+    #fd3018 5px,
+    #ffa89e 5px,
+    #ffa89e 10px
+  );
+  position: absolute;
+  margin: auto;
+  left: 0;
+  right: 0;
+  bottom: 202px;
+}
+.candle:before {
+  content: "";
+  position: absolute;
+  height: 16px;
+  width: 16px;
+  background-color: #ffa500;
+  border-radius: 0 50% 50% 50%;
+  bottom: 48px;
+  transform: rotate(45deg);
+  left: -1px;
+}
+.outside p {
+  font-size: 23px;
+  text-transform: uppercase;
+  margin-top: 30px;
+  text-align: center;
+  letter-spacing: 6px;
+  color: #000046;
+}
+.inside h1 {
+  font-size: 120px;
+  line-height: 120px;
+}
+
+.birthday-section {
+  display: flex;
+  justify-content: center;
+}
+
+footer {
+  height: 50px;
+  margin: 0 1rem;
+}
+
+footer p {
+  text-align: center;
+}
 
 
 /* responsive */
